index sayfası güncellendi

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <link rel="stylesheet" href="bluestyle.css"></link>
 </head>
 <body>
-    <h1>
-        Selam
-    </h1>
+    <h1>Selam</h1>
+    <p> Selamlar nasılsınız....</p>
+    <p>Bu yeni paragraf....</p>
 </body>
 
 </html>
