--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <p> Selamlar nasılsınız....</p>
     <p>Bu yeni paragraf....</p>
     <div><img src="1.png" alt="" style="width:100%;height: 100%;max-width: 960px;"></div>
+    <p>New line.......</p>
+    <div><img src="2.png" alt="" style="width:100%;height: 100%;max-width: 960px;"></div>
 </body>
 
 </html>
