--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Selam</h1>
     <p> Selamlar nasılsınız....</p>
     <p>Bu yeni paragraf....</p>
+    <div><img src="1.jpg" alt="deneme resim" style="width: 100%; max-width: 960px;"></div>
 </body>
 
 </html>
