--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <h1>Selam</h1>
     <p> Selamlar nasılsınız....</p>
     <p>Bu yeni paragraf....</p>
-    <div><img src="1.jpg" alt="deneme resim" style="width: 100%; max-width: 960px;"></div>
+    <div><img src="1.jpg" alt="deneme resim 1" style="width: 100%; max-width: 960px;"></div>
+     <div><img src="2.jpg" alt="deneme resim 2" style="width: 100%; max-width: 740px;"></div>
 </body>
 
 </html>
